salesforce_sfdx/main/default/objects/OSFPE_obj_snapshot__c/OSFPE_obj_snapshot__c.object-meta.xml
<CustomObject>
    <label>Snapshot</label>
    <nameField>
        <displayFormat>S{000000000}</displayFormat>
        <label>Número de SnapShot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>