salesforce_sfdx/main/default/objects/OSFPE_obj_snapshot__c/fields/OSFPE_fld_obsoleteLoginUserList__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_obsoleteLoginUserList__c</fullName>
    <label>Lista de usuarios de inicio de sesión</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>