salesforce_sfdx/main/default/objects/OSFPE_obj_snapshot__c/fields/OSFPE_fld_porcentajeUsado__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_porcentajeUsado__c</fullName>
    <formula>IF(OSFPE_fld_RB_total__c = 0, 0, (OSFPE_fld_RB_usado__c / OSFPE_fld_RB_total__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje Usado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>