salesforce_sfdx/main/default/objects/OSFPE_obj_snapshot__c/fields/OSFPE_fld_RB_total__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_RB_total__c</fullName>
    <label>NB Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>