salesforce_sfdx/main/default/objects/OSFPE_obj_snapshot__c/fields/OSFPE_fld_timestamp__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>