salesforce_sfdx/main/default/objects/OSFPE_obj_snapshot__c/fields/OSFPE_fld_ultimo__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_ultimo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Último</label>
    <type>Checkbox</type>
</CustomField>