salesforce_sfdx/main/default/objects/OSFPE_obj_snapshot__c/fields/OSFPE_fld_unidades__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_unidades__c</fullName>
    <label>Unidades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>