salesforce_sfdx/main/default/objects/OSFPE_obj_snapshot__c/recordTypes/OSFPE_rt_Snapshot.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Snapshot</fullName>
    <active>true</active>
    <label>Perú</label>
</RecordType>